[package]
name = "crypto_exp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde = "1.0.139"
p256 = { version = "0.11.1", feature=["sec1"]}
# elliptic-curve = {version="0.12.2", features = ["sec1"]}
# base64 = "0.13.0"
hex = "0.4.3"
#  "arithmetic", "ecdsa", "pkcs8", "std", "sha256", "digest", "sha2", "pem", "hash2curve", "ecdh", "voprf", "bits", "expose-field", "jwk", "test-vectors"
# serde = { version = "1.0", features = ["derive"] }
# base64 = "0.13.0"
# elliptic-curve = "0.12.2"

[features]
# p256feats = ["p256/serde", "p256/pem"]
